manifest/carbon-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "carbon"
  namespace: "cloud-carbon"
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/carbon-gateway
  http:
  - route:
    - destination:
        host: "*"
        port:
          number: 80
